# DMPC-for-multi-agent

./: README.md
MPC_p2p_cpp/: CMakeLists.txt  MPC_p2p.cpp  MPC_p2p.h  formation.cpp  formation.h  formationMain.cpp  formationMain.h  main.cpp
MPC_p2p_matlab/: PIDcontrol.m  agentQPCollision.m  agentQPhard.m  collisionIF.m  getA0.m  getAbieqHard.m  getPAB.m  getUstar.m  getdelta.m
MPC_p2p_multiagent/: agentQP.m  changeDestination.m  changeOnedes.m  detectCollision.m  detectPID.m  forwardState.m  getAbieaCollision.m  getLambda.m  getLambda_v.m  judgeArrived.m  main2D_4.m  main2d_8.m
